--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root" class="flex flex-col items-center justify-center w-screen h-screen"></div>
+    <div id="root" class="flex flex-col items-center justify-center md:w-screen h-screen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
