--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- SVG favicon (modern) -->
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any" />
+
+    <!-- Safari pinned tab (monochrome) -->
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#7c4dff" />
+
+    <meta name="theme-color" content="#0b1020" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
